# currency-reader

./: Dockerfile
.github/workflows/: blank.yml  release.yml
src/: currency-reader.py  pyproject.toml  requirements.txt
src/coins/: coin_ada.py  coin_btc.py  coin_eth.py  coin_prices.py
src/kafka/: kafka.py
src/resources/: health.py  metrics.py
src/schedulers/: coin_schedule.py
