[tool.poetry]
name = "currency-reader"
version = "0.1.0"
description = ""
authors = ["Jesper Fussing Mørk <jfm@moerks.dk>"]

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^20.0.4"
falcon = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
